--- a/masking.ipynb
+++ b/masking.ipynb
@@ -54,58 +54,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<=' not supported between instances of 'NoneType' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m thresh_combined \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros_like(image)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Set pixels based on thresholds\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m thresh_combined[(\u001b[43mimage\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mthreshold1\u001b[49m)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     20\u001b[0m thresh_combined[(image \u001b[38;5;241m>\u001b[39m threshold1) \u001b[38;5;241m&\u001b[39m (image \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m threshold2)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m127\u001b[39m\n\u001b[0;32m     21\u001b[0m thresh_combined[(image \u001b[38;5;241m>\u001b[39m threshold2)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m255\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '<=' not supported between instances of 'NoneType' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "\n",
     "import cv2\n",
+    "import numpy as np\n",
     "\n",
-    "# Labels for train\n",
-    "input_dir = 'Annotated/train'\n",
-    "output_dir = 'train/labels'\n",
+    "# Load the image\n",
+    "image = cv2.imread('cloud.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "# Labels for test\n",
-    "#input_dir = 'Annotated/test'\n",
-    "#output_dir = 'test/labels'\n",
+    "# Define thresholds\n",
+    "threshold1 = 50\n",
+    "threshold2 = 150\n",
     "\n",
-    "# Labels for valid\n",
-    "#input_dir = 'Annotated/valid'\n",
-    "#output_dir = 'valid/labels'\n",
+    "# Apply thresholding\n",
+    "_, thresh1 = cv2.threshold(image, threshold1, 255, cv2.THRESH_BINARY)\n",
+    "_, thresh2 = cv2.threshold(image, threshold2, 255, cv2.THRESH_BINARY)\n",
     "\n",
-    "for j in os.listdir(input_dir):\n",
-    "    image_path = os.path.join(input_dir, j)\n",
-    "    # load the binary mask and get its contours\n",
-    "    mask = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
-    "    _, mask = cv2.threshold(mask, 1, 255, cv2.THRESH_BINARY)\n",
+    "# Create an image to combine the thresholds\n",
+    "thresh_combined = np.zeros_like(image)\n",
     "\n",
-    "    H, W = mask.shape\n",
-    "    contours, hierarchy = cv2.findContours(mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "# Set pixels based on thresholds\n",
+    "thresh_combined[(image <= threshold1)] = 0\n",
+    "thresh_combined[(image > threshold1) & (image <= threshold2)] = 127\n",
+    "thresh_combined[(image > threshold2)] = 255\n",
     "\n",
-    "    # convert the contours to polygons\n",
-    "    polygons = []\n",
-    "    for cnt in contours:\n",
-    "        if cv2.contourArea(cnt) > 200:\n",
-    "            polygon = []\n",
-    "            for point in cnt:\n",
-    "                x, y = point[0]\n",
-    "                polygon.append(x / W)\n",
-    "                polygon.append(y / H)\n",
-    "            polygons.append(polygon)\n",
-    "\n",
-    "    # print the polygons\n",
-    "    with open('{}.txt'.format(os.path.join(output_dir, j)[:-4]), 'w') as f:\n",
-    "        for polygon in polygons:\n",
-    "            for p_, p in enumerate(polygon):\n",
-    "                if p_ == len(polygon) - 1:\n",
-    "                    f.write('{}\\n'.format(p))\n",
-    "                elif p_ == 0:\n",
-    "                    f.write('0 {} '.format(p))\n",
-    "                else:\n",
-    "                    f.write('{} '.format(p))\n",
-    "\n",
-    "        f.close()"
+    "# Save or display the result\n",
+    "cv2.imwrite('thresholded_image.png', thresh_combined)\n",
+    "cv2.imshow('Thresholded Image', thresh_combined)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
